 - add callouts
     Spring.{Get,Set}FeaturePieceCollisionVolumeData
     Spring.GetFeatureLastAttackedPiece
     Spring.GetFeaturePieceMap
     Spring.GetFeaturePieceList
     Spring.GetFeaturePieceInfo
     Spring.GetFeaturePiecePosition
     Spring.GetFeaturePieceDirection
     Spring.GetFeaturePiecePosDir
     Spring.GetFeaturePieceMatrix

 - add Spring.FeatureRendering API; allows custom shaders (technically,
   materials) for features as its Spring.UnitRendering counterpart does
   for units
   note: the following two functions are no-ops
     Spring.UnitRendering.SetFeatureLuaDraw
     Spring.FeatureRendering.SetUnitLuaDraw

 - add new callin DrawGroundPostDeferred; this runs at the end of its
   respective deferred pass and allows proper frame compositing (with
   ground flashes/decals/foliage/etc, which are drawn between it and
   DrawWorldPreUnit)

 - add new callins DrawUnitsPostDeferred and DrawFeaturesPostDeferred
   these run at the end of their respective deferred passes to inform
   Lua code it should make use of the $model_gbuffer_* textures before
   another pass overwrites them (and to allow proper blending with e.g.
   cloaked objects which are drawn between these events and DrawWorld)

 - allow Lua to disable the forward {Unit,Feature,Ground}Drawer passes;
   use the callouts
     Spring.SetDrawGroundDeferred(
          boolean drawGroundDeferred
       [, boolean drawGroundForward]
     )
   and
     Spring.SetDrawModelsDeferred(
          boolean drawUnitsDeferred,
          boolean drawFeaturesDeferred
       [, boolean drawUnitsForward
       [, boolean drawFeaturesForward ]]
     )

   note: the *PostDeferred events are only sent (and only have a real
   purpose) if forward drawing is disabled!

Rendering:
 - add support for SSMF Splat Detail Normal Textures (by Beherith)
 - add deferred pass for features; note that these are drawn into
   the same buffer as units (overwriting it, unless the new config